--- a/frontend/app/registration/src/index.html
+++ b/frontend/app/registration/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover,interactive-widget=resizes-content">
     <title>Schrijf je in!</title>
     <meta data-vmid="description" name="description" content="Via deze pagina kan je je inschrijven.">
 </head>
